--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,16 @@ form .form-group {
   background-color: rgba(0, 0, 0, .03);
   text-align: center;
 }
+
+.alert.home-alert {
+  margin-bottom: 0;
+}
+
+.alert button.close {
+  float: right;
+  color: inherit;
+  margin-right: -30px;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0;
+}
