--- a/src/index.css
+++ b/src/index.css
@@ -36,19 +36,14 @@ form .form-group {
   text-align: center;
 }
 
-.sideBarPlaylist {
+.sideBarPlaylist, .sideBarChatbox {
   height: calc(100vh - 100px);
-  background:rgba(63, 78, 119, 0.911);
-}
-
-.sideBarChatbox {
-  height: calc(100vh - 100px);
-  background:rgba(63, 78, 119, 0.911);
+  background:rgba(218, 218, 218, 0.911);
 }
 
 .sideBarChatbox, .sideBarPlaylist > p {
-  color:white;
   text-align: center;
+  font-weight: bold;
 }
 
 .video-wrapper {
