--- a/src/page/lobby.css
+++ b/src/page/lobby.css
@@ -13,7 +13,6 @@ a:hover .box {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  font-size: 25px;
   text-align: center;
 }
 
@@ -21,12 +20,6 @@ a {
   color: black;
   background-color: transparent;
   text-decoration: none;
-}
-
-a:hover {
-  color: red;
-  background-color: transparent;
-  text-decoration: underline;
 }
 
 .limit {
@@ -48,4 +41,11 @@ px) {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  margin: 0px;
+}
+
+.card {
+  margin: 10px;
+  width: 18rem;
+  border: danger;
 }
