--- a/src/page/chatroom.css
+++ b/src/page/chatroom.css
@@ -60,6 +60,7 @@
 
   .topBarButton {
     width: 23%;
+    right: 0px;
     background-color: rgb(0, 0, 223);
   }
 
@@ -70,7 +71,7 @@
   #topBarTitle {
     color: black;
     float: left;
-    width: 77%;
+    width: 76%;
     border-bottom: 1px solid grey;
 
 }
