--- a/src/page/chatroom.css
+++ b/src/page/chatroom.css
@@ -50,6 +50,7 @@
 
   .column {
       padding: 0;
+      margin-right: auto;
   }
 
   .topBar {
@@ -60,7 +61,7 @@
 
   .topBarButton {
     width: 23%;
-    right: 0px;
+    float: right;
     background-color: rgb(0, 0, 223);
   }
 
@@ -79,11 +80,6 @@
 #topBarHeader {
     padding-left: 15px;
     padding-top: 5px;
-}
-
-#root {
-    padding: 0px;
-    margin: 0;
 }
 
 #nextSongButton {
