--- a/src/page/chatroom.css
+++ b/src/page/chatroom.css
@@ -152,4 +152,38 @@
 
 #messageContainer {
   padding-left: 10px;
+  height: 100%;
+  overflow-y: scroll;
 }
+
+/*
+#messageContainer::-webkit-scrollbar {
+  background-color: #fff;
+  width: 16px;
+}
+*/
+
+/*
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+
+/*
+*::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */ /*
+*::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */ /*
+*::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+} 
+*/
+
